# vLEM

./: .gitignore  docker-compose.yml  index.html  package-lock.json  tailwind.config.js
api/: .gitignore  app.py  config.py  db.py  helpers.py  pyproject.toml  workers.py
api/base/: models.py
api/labs/: constants.py  enum.py  models.py  routes.py  schemas.py  tasks.py  utils.py
api/migrations/: env.py
api/migrations/versions/: 25773d2caa8a_create_lab_buildlog_model.py  e393dc275683_create_labs_table.py
src/: index.css
src/components/: Navigation.tsx  Settings.tsx
src/data/: templates.ts
src/hooks/: useDockerLabs.ts
src/types/: index.ts
templates/: metadata.json
templates/bwapp/: compose.yml
web/: package-lock.json  package.json
web/src/: App.tsx
web/src/components/: BuildLogs.tsx  ContainerExec.tsx  ContainerExecPage.tsx  CreateLab.tsx  Dashboard.tsx  Header.tsx  LabDetails.tsx  LabTemplates.tsx  LogViewer.tsx  LogsPage.tsx  Settings.tsx  Sidebar.tsx
web/src/components/ui/: button.tsx
web/src/hooks/: useDockerLabs.ts
web/src/lib/: utils.ts
web/src/services/: labService.ts
web/src/types/: index.ts
